--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,8 +9,23 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="cs/estilos.css" type="text/css">
     </head>
     <body>
         
-    </body>
+        <header>
+
+            David Reyna Barreto
+        </header>
+        <nav>
+            <ul>
+                <li><a href="http://www.google.com">Google</a></li>
+                <li><a href="http://www.upeu.edu.pe">UPeU</a></li>
+                <li><a href="http://www.facebook.com">Facebook</a></li>
+            </ul>
+        </nav>
+        <footer>
+            © 2016 - Universidad Peruana Unión
+        </footer>
+      
 </html>
